@@ -1,3 +1,5 @@
+JG-2006-01-03-0: Bugfix:    fixed qstat test for SGE 6.0.
+
 CR-2006-01-03-0: Cleanup:   test if build arch directory exists in procedure
                             resolve_build_arch_installed_libs()
 
@@ -14,12 +16,13 @@ JG-2006-12-28-0: Bugfix:    Avoid errors from complex test on slow machines (or
                  Cleanup:   Don't use CHECK_ACT_PATH as absolute path of the 
                             current check - use CHECK_ACTUAL_TEST_PATH instead.
 
-CR-2006-12-27-0: Bugfix:    Fixed problem when a ts config file is newly generated
+CR-2006-12-27-0: Bugfix:    Fixed problem when a ts config file is newly 
+                            generated
 
 JG-2006-12-27-0: Cleanup:   Removed global variables, minor fixes.
 
 OJ-2006-12-22-1: Testsuite: Added test case for TS IZ 72 in 
-                            testsuite/src/checktree/system_tests/clients/qsub/check.exp
+                            system_tests/clients/qsub
                  Review:    DT
 RD-2006-12-22-0: Enhancem:  Added some tests for fixed issues:
                             - qconf -Arqs added invalid RQS
